#1 Fix content behind header

--- a/frontend/src/food.module.scss
+++ b/frontend/src/food.module.scss
@@ -51,6 +51,7 @@ $size-spacing-3: 30px;
 }
 
 .pageSection {
+    padding-top: 80px;
     width: 100%;
     height: auto;
     background-color: $secondary;
